tests/ui/str_dyn.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> tests/ui/str_dyn.rs:11:70
   |
11 | unsafe impl unsizing_experiments::unsize::ConstUnsize<dyn Trait> for str {
   |                                                                      ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: required for `str` to implement `unsizing_experiments::unsize::Unsize<(dyn Trait + 'static)>`
   = note: required for `str` to implement `StableUnsize<(dyn Trait + 'static)>`
note: required by a bound in `ConstUnsize`
  --> src/unsize.rs
   |
   | pub unsafe trait ConstUnsize<Target>: StableUnsize<Target>
   |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConstUnsize`
